2009-11-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): Add new function
	to format strings with a user-defined table.
	(twittering-retweet): Use 'twittering-format-string'.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(+twittering-direct-message, twittering-mode-map):
	New `twittering-direct-message' function to send direct messages.

2009-11-15  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-convert-fix-size): New variable.
	(twittering-image-type): Use it; Resize icons to fix size if the
	above variable is set.

2009-11-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el, test/run-test.el, test/elunit.el: add unit testing framework elunit.

	* twittering-mode.el (twittering-goto-next-thing,
	(twittering-goto-previous-thing): add new commands.
	(twittering-goto-previous-status): check whether prev-pos is not nil.
	(twittering-set-current-hashtag, twittering-hashtag-history): add functions to support hashtag. Set the current hashtag with C-c C-h.
	(twittering-update-status-from-minibuffer): use the current hashtag if set.

2009-11-13  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-convert-last-timeline-retrieved):
	New defun to keep a backward compatibility.
	(twittering-last-host, twittering-last-method): Call it.

2009-11-10  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-follow): New command.
	(twittering-unfollow): Likewise.
	(twittering-manage-friendships): New defun.

	* twittering-mode.el (twittering-favorite): New command.
	(twittering-unfavorite): Likewise.
	(twittering-manage-favorites): New defun.

2009-11-09  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-mode-map): Bind "L" to
	`twittering-other-user-list-interactive'.

	* twittering-mode.el (twittering-other-user-list-interactive): Set
	default username interactively.